# JinglePalettePro

./: .gitignore  CMakeLists.txt  JinglePalettePro-v0.1.iss  JinglePalettePro.iss  README.md  build.sh  jinglepalettepro.code-workspace  make_deb.sh
build_scripts/linux/: build.sh  build_appimage.sh  build_deb.sh  build_deb_full.sh  rebuild.sh
build_scripts/macos/: build.sh  package_dmg.sh  rebuild.sh
build_scripts/windows/: build.bat  package_installer.bat  rebuild.bat
resources/: logo.icns  resources.qrc
src/: aboutdialog.cpp  audioengine.cpp  audioengine.h  errorlogger.cpp  errorlogger.h  globals.h  httpserver.cpp  httpserver.h  jinglebutton.cpp  jinglebutton.h  languagemanager.cpp  languagemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  palettemanager.cpp  palettemanager.h  remotecontrolserver.cpp  remotecontrolserver.h  remotecontrolserver.md  settingsdialog.cpp  settingsdialog.h  settingsmanager.cpp  settingsmanager.h  vumeter.cpp  vumeter.h
